# TivatSuvivor

./: CMakeLists.txt  README.md  main.cpp
Animation/: Animation.cpp  Animation.h  Atlas.cpp  Atlas.h
Button/: Button.cpp  Button.h  QuitButton.cpp  QuitButton.h  StartButton.cpp  StartButton.h
GameObject/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  bullet.cpp  bullet.h
